open section plus makefil includes bib

--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -1,30 +1,44 @@
-\section{Open, Reproducible, Executable}
+\section{Open, Executable, Reproducible}
 
 This paper is intended to be \emph{open}, 
-\emph{reproducible}, and \emph{executable}.  We discuss here what we mean by these words, how we tried to achieve them, and to what extent we achieved this.
+\emph{executable},
+and \emph{reproducible}.  
+We discuss here what we mean by these words, how we tried to achieve them, and to what extent we succeeded.
 
-By ``open'', we mean that the paper was openly developed and written.  The authors collaborated via GitHub.
-Although authors were usually in the same room, with so many of us other forms of collaboration would have been very 
-difficult.  More importantly, for the current discussion, this means that the
+By ``open'', we mean that the paper was openly developed and written.  The paper was first sketched out in the week of the summer school, and then 
+developed further over the following three weeks.  The authors collaborated via GitHub: this is not unusual but distributed source code control was  particularly important with so may authors working in parallel over a short period of time.
+Because we used a public github repository \cite{summerschoolpaper}, 
+the
 development of the paper can be tracked throughout through the commit history on
-GitHub.  Anybody can download not only the final paper, but its source, and code and other materials collected during its development.  An interesting aside is that this means that anybody can see what each author committed on the paper or supporting materials at any time, although it must be borne in mind that a commit by one person may represent the work of several authors working together offline.
+GitHub.  
+Anybody can download not only the final paper, but its source, and code and other materials collected during its development.  
+An interesting aside, relevant to cases where statements of contribution are required, is that anybody can see what each author committed on the paper or supporting materials throughout its life.  However, it must be borne in mind that a commit by one person may represent the work of several authors working together offline.  
 
-By ``reproducible'', we mean that it is our intention that other scientists (or
-ourselves at later dates) will be able to reproduce our work to assess if
-statements we make are correct and if conclusions are valid.  To enable this we
-have attempted to collate materials necessary for each study, and make them
-available to future researchers.  In most cases this has also been done in
-version control, 
-with materials such as ethics forms and experimental results put into the repository.  In some cases we have constructed virtual machines to recompute experiments.  Even a small VM 
-might be half a gigabyte, and such large files can be problematic for version
-control. This is the main reason these are not included in the repository.
-
-Finally, by ``executable'', we mean a paper that can be reconstructed from source 
-materials, and that data can be reanalysed as it changes and new versions of the paper produced, and possibly executable code rerun.  
+By ``executable'', we mean that the paper that can be reconstructed from source 
+materials, and that data can be reanalysed as it changes and new versions of the paper produced, and possibly executable code rerun.   The name has been used, for example, by the ``Executable Papers Grand Challenge'' \cite{executablepaper}.
 This has numerous advantages because as we add data, the paper does not need to be rewritten.\footnote{The name ``reproducible paper'' is sometimes used for this, but can lead to confusion because a paper can be executable in the sense of being able to produce new figures with 
 changed data, but not reproducible if that data can not be reconstructed ab initio.}
 To make our paper executable, we used Sweave~\cite{lmucs-papers:Leisch:2002}, a package that integrates the statistics system R and \LaTeX. 
 To ease the workflow and to make execution of the paper easy, we wrote a Makefile for the generation of the paper PDF, although there are still some issues which need manual intervention such as installation of the necessary R packages. 
+
+By ``reproducible'', we mean that it is our intention that other scientists (or
+ourselves at later dates) will be able to reproduce our work to assess if
+statements we make are correct and if conclusions are valid.  
+As mentioned earlier, 
+To enable this we
+have attempted to collate materials necessary for each study, and make them
+available to future researchers.  
+In some cases this has also been done in git,
+with materials such as ethics forms and experimental results put into the repository.  
+In other cases we have constructed virtual machines to recompute experiments.  
+We also built a machine which not only contains a clone of the github repository, but all the necessary software and packages such as R, \LaTeX to build the paper.
+As well as reproducibility, this helped us during the writing of the paper.  At times some authors would be unable to build the whole paper, perhaps because of slight differences in version numbers of R or its packages from other authors.  The availability of the VM in which the paper could build was invaluable, since if it built there, we were safe.  This also highlights the value of the paper VM, since if not all authors could build the paper during its preparation because of package inconsistencies, it is very likely that future workers would not be able to build it from the github repository without some work.
+Even a small VM 
+might be half a gigabyte, and such large files can be problematic for git.
+These are therefore stored elsewhere.  
+\textbf{Put in links somewhere}.
+Our approach can be seen as similar to that of Brown \cite{brown} for one of his papers with colleagues \cite{Brown2012}.
+
 
 To what extent have we succeeded in making this paper open,
 reproducible, and executable?  At this point in time, we would say our success is mixed.  We cannot be completely open because
