--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -2,6 +2,13 @@
     year = 2014,
     url = "https://github.com/larskotthoff/recomputation-ss-paper/",
     title = "GitHub repository for Recomputation Summer School Paper"}
+
+@Misc{executablepaper,
+    year = 2011,
+    url = "http://www.elsevier.com/physical-sciences/computer-science/executable-papers",
+    author = "Elsevier",
+    title = "Executable Papers Grand Challenge"}
+
     
 @Misc{parasols,
     year = 2014,
@@ -438,3 +445,281 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   arxiv       = {1408.2123},
   year	      =	{2014}
 }
+@article{shrdlu,
+      title={Understanding natural language},
+        author={Winograd, Terry},
+          journal={Cognitive Psychology},
+            volume={3},
+              number={1},
+                pages={1--191},
+                  year={1972},
+                    publisher={Elsevier}
+}
+
+@article{drummond09,
+    title = "Replicability is not reproducibility: Nor is it good science",
+    author = "Chris Drummond",
+    year = "2009",
+    journal =  "Proceedings of the Twenty-Sixth International Conference on Machine Learning: Workshop on Evaluation Methods for Machine Learning IV"}
+
+    @article{hownot,
+          title={How not to do it},
+            author={Gent, I.P. and Grant, S.A. and MacIntyre, E. and Prosser, P. and Shaw, P. and Smith, B.M. and Walsh, T.},
+              journal={Research Report Series-University of Leeds School of Computer studies LU SCS RR},
+                year={1997},
+                  publisher={UNIVERSITY OF LEEDS}
+    }
+
+
+@article{DBLP:journals/cse/GavishD12,
+  author    = {Matan Gavish and
+               David L. Donoho},
+  title     = {Three Dream Applications of Verifiable Computational Results},
+  journal   = {Computing in Science and Engineering},
+  volume    = {14},
+  number    = {4},
+  year      = {2012},
+  pages     = {26-31},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2012.65},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{sumatra-davison,
+    author = "Andrew Davison",
+    title = "Automated tracking of computational experiments using Sumatra",
+    howpublished = "\url{http://www.andrewdavison.info/media/slides/sumatra_euroscipy2010.pdf}",
+    booktitle = "EuroSciPy: 3rd European meeting on Python in Science",
+    year = 2010}
+
+@inproceedings{DBLP:conf/eScience/StoddenHP12,
+  author    = {Victoria Stodden and
+               Christophe Hurlin and
+               Christophe Perignon},
+  title     = {RunMyCode.org: A novel dissemination and collaboration platform
+               for executing published computational results},
+  booktitle = {eScience},
+  year      = {2012},
+  pages     = {1-8},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/eScience.2012.6404455},
+  crossref  = {DBLP:conf/eScience/2012},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/eScience/2012,
+  title     = {8th IEEE International Conference on E-Science, e-Science
+               2012, Chicago, IL, USA, October 8-12, 2012},
+  booktitle = {e-Science},
+  publisher = {IEEE Computer Society},
+  year      = {2012},
+  isbn      = {978-1-4673-4467-8},
+  ee        = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6389598},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{DBLP:journals/fgcs/RoureGS09,
+  author    = {David De Roure and
+               Carole A. Goble and
+               Robert Stevens},
+  title     = {The design and realisation of the my$_{\mbox{Experiment}}$
+               Virtual Research Environment for social sharing of workflows},
+  journal   = {Future Generation Comp. Syst.},
+  volume    = {25},
+  number    = {5},
+  year      = {2009},
+  pages     = {561-567},
+  ee        = {http://dx.doi.org/10.1016/j.future.2008.06.010},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@book{DBLP:books/sp/Schulte02,
+  author    = {Christian Schulte},
+  title     = {Programming Constraint Services: High-Level Programming
+               of Standard and New Constraint Services},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {2302},
+  year      = {2002},
+  isbn      = {3-540-43371-6},
+  ee        = {http://dx.doi.org/10.1007/3-540-45945-6},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{worthdoingtwice,
+    title = "If a job is worth doing, it is worth doing twice",
+    journal = "Nature", 
+    year = 2013,
+    pages = "7", 
+    volume = 496,
+    author = "Jonathan F. Russell",
+    month = "April",
+    doi = "doi:10.1038/496007a",
+    ee = "http://www.nature.com/news/if-a-job-is-worth-doing-it-is-worth-doing-twice-1.12727"
+}
+
+@inproceedings{DBLP:conf/lion/NellFHL11,
+  author    = {Christopher Nell and
+               Chris Fawcett and
+               Holger H. Hoos and
+               Kevin Leyton-Brown},
+  title     = {HAL: A Framework for the Automated Analysis and Design of
+               High-Performance Algorithms},
+  booktitle = {LION},
+  year      = {2011},
+  pages     = {600-615},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-25566-3_47},
+  crossref  = {DBLP:conf/lion/2011},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/lion/2011,
+  editor    = {Carlos A. Coello Coello},
+  title     = {Learning and Intelligent Optimization - 5th International
+               Conference, LION 5, Rome, Italy, January 17-21, 2011. Selected
+               Papers},
+  booktitle = {LION},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6683},
+  year      = {2011},
+  isbn      = {978-3-642-25565-6},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-25566-3},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+
+@Article{InceD2012Case,
+  author =       {Darrel C. Ince and Leslie Hatton and John Graham-Cumming}, 
+  title =        {The case for open computer programs},
+  journal =      {Nature},
+  year =         {2012},
+  volume =       {482},
+  number =       {7386},
+  pages =        {485-488},
+  month =        {february},
+  DOI =          {10.1038/nature10836},
+  PMID =         {22358837},
+  WOBIB =        {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@article{DBLP:journals/sosym/GorpG12,
+  author    = {Pieter Van Gorp and
+               Paul W. P. J. Grefen},
+  title     = {Supporting the internet-based evaluation of research software
+               with cloud infrastructure},
+  journal   = {Software and System Modeling},
+  volume    = {11},
+  number    = {1},
+  year      = {2012},
+  pages     = {11-28},
+  ee        = {http://dx.doi.org/10.1007/s10270-010-0163-y},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@misc{shrdlu-resurrection,
+      title="{SHRDLU} resurrection",
+      year = 2011,
+      author = "Semaphore~Corporation",
+        howpublished = "\url{http://www.semaphorecorp.com/misc/shrdlu.html}"
+}
+
+@misc{claerbout,
+      author = "Jon Claerbout",
+      title = "REPRODUCIBLE COMPUTATIONAL RESEARCH: A history of hurdles, mostly overcome",
+        howpublished = "\url{http://sepwww.stanford.edu/sep/jon/reproducible.html}"
+}
+
+@misc{brown,
+      author = "C. Titus  Brown",
+      title = "Our approach to replication in computational science",
+        howpublished = "\url{http://ivory.idyll.org/blog/replication-i.html}",
+            year = 2012
+}
+
+@misc{guo-phd,
+    author = "Philip J. Guo",
+   title = "Software Tools to Facilitate Research Programming",
+       year = 2012,
+   howpublished = "Ph.D. dissertation, Department of Computer Science, Stanford University"}
+
+@inproceedings{DBLP:conf/csclp/BeckPW04,
+      author    = {J. Christopher Beck and
+                         Patrick Prosser and
+                                            Richard J. Wallace},
+        title     = {Trying Again to Fail-First},
+          booktitle = {CSCLP},
+            year      = {2004},
+              pages     = {41-55},
+                ee        = {http://dx.doi.org/10.1007/11402763_4},
+                  crossref  = {DBLP:conf/csclp/2004},
+                    bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@proceedings{DBLP:conf/csclp/2004,
+      editor    = {Boi Faltings and
+                         Adrian Petcu and
+                                            Fran\c{c}ois Fages and
+                                                           Francesca Rossi},
+        title     = {Recent Advances in Constraints, Joint ERCIM/CoLogNet International
+                           Workshop on Constraint Solving and Constraint Logic Programming,
+                                          CSCLP 2004, Lausanne, Switzerland, June 23-25, 2004, Revised
+                                                             Selected and Invited Papers},
+          booktitle = {CSCLP},
+            publisher = {Springer},
+              series    = {Lecture Notes in Computer Science},
+                volume    = {3419},
+                  year      = {2005},
+                    isbn      = {3-540-25176-6},
+                      bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+
+@article{Brown2012,
+      abstract = {Deep shotgun sequencing and analysis of genomes, transcriptomes, amplified single-cell genomes, and metagenomes has enabled investigation of a wide range of organisms and ecosystems. However, sampling variation in short-read data sets and high sequencing error rates of modern sequencers present many new computational challenges in data interpretation. These challenges have led to the development of new classes of mapping tools and \{$\backslash$em de novo\} assemblers. These algorithms are challenged by the continued improvement in sequencing throughput. We here describe digital normalization, a single-pass computational algorithm that systematizes coverage in shotgun sequencing data sets, thereby decreasing sampling variation, discarding redundant data, and removing the majority of errors. Digital normalization substantially reduces the size of shotgun data sets and decreases the memory and time requirements for \{$\backslash$em de novo\} sequence assembly, all without significantly impacting content of the generated contigs. We apply digital normalization to the assembly of microbial genomic data, amplified single-cell genomic data, and transcriptomic data. Our implementation is freely available for use and modification.},
+        added-at = {2012-11-08T12:19:32.000+0100},
+          author = {Brown, C Titus and Howe, Adina and Zhang, Qingpeng and Pyrkosz, Alexis B and Brom, Timothy H},
+            biburl = {http://www.bibsonomy.org/bibtex/21fb5a230c0946fc42e2737a2eda7c528/jabreftest},
+              file = {Brown2012_01.pdf:Brown2012_01.pdf:PDF;Brown2012_00.txt:Brown2012_00.txt:Text},
+                groups = {public},
+                  interhash = {ab786d8050c05f62d84cc7a7b5e94eb2},
+                    intrahash = {1fb5a230c0946fc42e2737a2eda7c528},
+                      keywords = {normalization rna-seq},
+                        timestamp = {2012-11-08T12:19:32.000+0100},
+                          title = {{A Reference-Free Algorithm for Computational Normalization of Shotgun Sequencing Data}},
+                            url = {http://arxiv.org/abs/1203.4802},
+                              username = {jabreftest},
+                                year = 2012
+}
+
+
+@article{DBLP:journals/algorithms/Prosser12,
+      author    = {Patrick Prosser},
+        title     = {Exact Algorithms for Maximum Clique: A Computational Study},
+          journal   = {Algorithms},
+            volume    = {5},
+              number    = {4},
+                year      = {2012},
+                  pages     = {545-587},
+                    ee        = {http://dx.doi.org/10.3390/a5040545},
+                      bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@article{10.1109/MCSE.2012.62,
+    author = {Bill Howe},
+    title = {Virtual Appliances, Cloud Computing, and Reproducible Research},
+    journal ={Computing in Science and Engineering},
+    volume = {14},
+    number = {4},
+    issn = {1521-9615},
+    year = {2012},
+    pages = {36-41},
+    doi = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2012.62},
+    publisher = {IEEE Computer Society},
+    address = {Los Alamitos, CA, USA},
+}
+
+
