--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -36,21 +36,19 @@ As well as reproducibility, this helped us during the writing of the paper.  At 
 Even a small VM 
 might be half a gigabyte, and such large files can be problematic for git.
 These are therefore stored elsewhere.  
-\textbf{Put in links somewhere}.
 Our approach can be seen as similar to that of Brown \cite{brown} for one of his papers with colleagues \cite{Brown2012}.
 
 
-To what extent have we succeeded in making this paper open,
-reproducible, and executable?  At this point in time, we would say our success is mixed.  We cannot be completely open because
-some of the data and/or programs used in various parts of our paper do not allow us to share them.  Also our paper is not fully executable in the sense that many 
-computations involved in constructing the data must be run by hand.   In terms of reproducibility, it is interesting to speculate: for example, if we run a second summer school in 2015, we might ask participants to reproduce this paper and see how we did this year.
+To what extent have we succeeded in our efforts?
+Our success is mixed.  We cannot be completely open because
+some of the data and/or programs used in various parts of our paper do not allow us to share them.  This is particularly true of the third case study, and as a result we cannot distribute the VM embodying those experiments. Also our paper is not fully executable since 
+many computations involved in constructing the data must be run by hand.  Also some of the tables in this paper are static, with data entered manually rather than reanalysed by Sweave. This constrasts negatively with Brown's executable paper, \cite{brown}.  
+In terms of reproducibility, we feel we have been mostly successful.  
+Provision of materials via github will be helpful for those who wish to adapt or reproduce our work.
+We have provided VMs where possible and appropriate, and can distribute two of them: this should enable the recomputation of our paper.  
+While we might pat ourselves on the back for this, we feel it is better to be cautious. We ourselves have discussed potential issues, such as ethical and legal, and unforeseen technical issues might prevent reproducibility. The real test of reproducibility must be time.
+It is interesting to speculate: for example, if we run a second summer school in 2015, we might ask participants to reproduce this paper and see how we did this year!
 
-
-
-\textbf{Notes about Sweave, about how all tables and fig in paper are from
-Sweave (true? -- no, some tables/figures are static (result of recomputation in
-VMs)).  
-VM in depot and recomp to allow paper to be rebuilt.
-VMs available where possible}
+\textbf{Put in links somewhere to VMS and recomputation.org?}.
 
 
