fix one of the bibtex errors

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -37,7 +37,7 @@
   Year = {2014},
 	arxiv = {1401.5921}}
   
-@url{azure,
+@Misc{azure,
 	Howpublished = {\url{https://azure.microsoft.com/en-us/}},
 	Title = {{Microsoft Azure}}}
 
