minor tweaks as I read through the paper

--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -44,9 +44,9 @@ as aware of issues related to reproducibility as computer scientists, does
 reproducibility suffer?
 
 Our final case study considers whether reproducible for one person is the same
-as reproducible for another. It asks how reproducible the data analysis of a
+as reproducible for another. It asks how reproducible is the data analysis of a
 published experiment in human-computer interaction where the author made
-significant efforts to make it reproducible is. While it is reasonable to assume
+significant efforts to make it reproducible. While it is reasonable to assume
 that the author of an experiment can conduct it in a way that enables her or him
 to do it again, having another person do it is an entirely different matter.
 There may be implicit assumptions that are not specified, background knowledge
@@ -63,7 +63,7 @@ School~\cite{emcsr_arxiv_draft}, with ensuing weeks used in completing work and 
 The first three case studies
 were selected by discussing the interests of participants and forming groups
 and research questions around these. Therefore, these case studies were
-performed by subsets of the authors. These case studies will be
+performed by subsets of the authors. These case studies are
 presented below in Sections~\ref{s:group1}~--~\ref{s:group3}. The final case
 study was led by a lecturer of the summer school, was performed by all
 participants, and is presented in Section~\ref{s:group4}.
@@ -72,19 +72,20 @@ The case studies we consider are not exhaustive and no single one can give
 complete answers. Instead, they shine spotlights on specific, important areas
 related to the issue of reproducibility in computational sciences. Furthermore,
 each raises interesting questions for future consideration by researchers
-wishing to reproduce computational experiments.
+interested in the reproducibility of computational experiments, be it trying to
+reproduce someone else's experiments, or making their own experiments
+reproducible.
 
-Additionally, we consider the meta-level question of how reproducible this paper
-itself is.  We have striven to make this paper open, reproducible, and
+Additionally, we consider the meta-level problem of how to make this very paper
+reproducible. We have striven to make this paper open, reproducible, and
 executable.
 The entire edit history, including paper and many aspects of the
 case studies, is available openly on
 GitHub
 and was indeed open from the start
-of writing the paper  
-\cite{summerschoolpaper}.
+of writing the paper~\cite{summerschoolpaper}.
 The paper has executable aspects through the integration of R
-and \LaTeX\ via the R package Sweave~\cite{pineda-krch:sweave}, so that as the underlying
+and \LaTeX\ via the R package Sweave~\cite{lmucs-papers:Leisch:2002}, so that as the underlying
 data change, new tables and figures can be regenerated automatically. Finally,
 we have endeavoured to make it reproducible through measures such as providing
 virtual machines for aspects of our work, not least a virtual machine in which
