minor tweaks as I go through

--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -2,7 +2,7 @@
 \label{s:obstacles}
 
 There are various obstacles to reproducibility, and many of these were
-  discussed by speakers and participants during the week. 
+  discussed by speakers and participants during our summer school.
 The obstacles and challenges are related to different stages of scientific 
   endeavour and different aspects of reproducibility.
 Amongst the obstacles and challenges that we identified are:
@@ -10,17 +10,17 @@ Amongst the obstacles and challenges that we identified are:
 {\bf Incentives} -- even though, as outlined in Section~\ref{s:recomputation}, 
   the issue of reproducibility is
   currently actively discussed by the scientific community, 
-  and the funding entities do campaign for
-  openness in computational science (e.g., \cite{NSF}), 
+  and funding bodies do campaign for
+  openness in computational science (e.g.,~\cite{NSF}), 
   the prevalent impression from the discussions at 
   the summer school is that there is still a lot to be done to increase 
   awareness of how one can benefit from reproducibility.
-Mechanisms that would reward those who deliver reproducible results are also
+Mechanisms that reward those who deliver reproducible results are also
   still to become widespread.
 It was reiterated during the school that the self-benefits 
   of reproducibility, such as increased productivity, are likely 
   a good enough reason to invest time on assuring it.
-However, in general both the self-benefits and the benefits to the community
+But both the benefits to the original researchers and the benefits to the community
   are latent and perceptible only in the longer term.
 Thus investing the time to offer reproducibility is difficult without
   approbation and endorsement from colleagues, collaborators, supervisors,
@@ -42,7 +42,7 @@ The reasons are at least threefold.
 First, the wealth of nomenclature (replicate, recompute, reproduce, 
   rerun, repeat, reuse) indicates that the aims and the needs of researchers
   differ significantly.
-Second, the technology advances and continuously offers new methods that can
+Second, technologies advance and continuously offer new methods that can
   aid researchers in offering reproducible results.
 Third, there are numerous tradeoffs to be made: 
   \begin{inparaenum}[(i)]
