--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -88,5 +88,5 @@ The paper has executable aspects through the integration of R
 and \LaTeX\ via the R package Sweave~\cite{lmucs-papers:Leisch:2002}, so that as the underlying
 data change, new tables and figures can be regenerated automatically. Finally,
 we have endeavoured to make it reproducible through measures such as providing
-virtual machines for aspects of our work, not least a virtual machine in which
+virtual machines (VMs) for aspects of our work, not least a VM in which
 the paper itself can be rebuilt.
