--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -58,7 +58,7 @@ Third, there are numerous tradeoffs to be made:
   distribution and long-term persistence of the reproducible experiments
   pose challenges.
 First, finding a venue for long-term preservation of large datasets or even 
-  moderately-sized virtual-machine based packages may be an issue.
+  moderately-sized VM-based packages may be an issue.
 This is especially the case if one aims at blending software and data
   dissemination with traditional academic publishing.
 Second, given that one of the key aims of reproducibility in science
