--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -45,7 +45,7 @@ Carpentry.\footnote{\url{http://software-carpentry.org/}} Davison describes how
 to make it easier to capture workflow and experimental context, including using
 a ``consistent, repeatable computing environment'' (the recomputation.org
 project and others~\cite{howe:reproducible} aim to make this particular aspect
-easier through the use of virtual machines), version control and clearly
+easier through the use of VMs), version control and clearly
 separated experimental parameters~\cite{davison:reproducibility}. Mesirov
 describes one particular workflow to make it easy to track and package genomic
 data~\cite{mesirov:accessible}. Our paper attempts to follow these best
