--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -30,7 +30,7 @@ have attempted to collate materials necessary for each study, and make them
 available to future researchers.  
 In some cases this has also been done in git,
 with materials such as ethics forms and experimental results put into the repository.  
-In other cases we have constructed virtual machines to recompute experiments.  
+In other cases we have constructed VMs to recompute experiments.  
 We also built a machine which not only contains a clone of the github repository, but all the necessary software and packages such as R, \LaTeX to build the paper.
 As well as reproducibility, this helped us during the writing of the paper.  At times some authors would be unable to build the whole paper, perhaps because of slight differences in version numbers of R or its packages from other authors.  The availability of the VM in which the paper could build was invaluable, since if it built there, we were safe.  This also highlights the value of the paper VM, since if not all authors could build the paper during its preparation because of package inconsistencies, it is very likely that future workers would not be able to build it from the github repository without some work.
 Even a small VM 
